Fixed broken css reset

--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -1,4 +1,3 @@
-@import url(reset.css);
 .stackAuto {
   width: auto; }
 
@@ -149,14 +148,16 @@ form ul li {
   width: auto;
   float: right; }
 
-.single_field .element input {
-  width: 100%; }
-.single_field .submit input {
-  width: 100%;
-  border-left: none;
-  -moz-border-radius: 0 4px 4px 0;
-  -webkit-border-radius: 0 4px 4px 0;
-  border-radius: 0 4px 4px 0; }
+.single_field {
+  margin-top: 10px; }
+  .single_field .element input {
+    width: 100%; }
+  .single_field .submit input {
+    width: 100%;
+    border-left: none;
+    -moz-border-radius: 0 4px 4px 0;
+    -webkit-border-radius: 0 4px 4px 0;
+    border-radius: 0 4px 4px 0; }
 
 .code textarea {
   height: 16em; }
@@ -200,6 +201,17 @@ input, textarea {
 
 .placeholder {
   color: #aaaaaa; }
+
+.ui-timepicker-div .ui-widget-header {
+  margin-bottom: 8px; }
+.ui-timepicker-div dl {
+  text-align: left; }
+.ui-timepicker-div dl dt {
+  height: 25px; }
+.ui-timepicker-div dl dd {
+  margin: -25px 0 10px 65px; }
+.ui-timepicker-div td {
+  font-size: 90%; }
 
 .flash {
   display: block;
